--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,11 @@ dependencies {
 
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+
+    //picaso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
