--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.ListLelangayamActivity"></activity>
+        <activity android:name=".activity.ImageRetrieveTry"></activity>
+        <activity android:name=".activity.ListLelangayamActivity" />
         <activity android:name=".activity.ListLelangsapiActivity" />
         <activity android:name=".activity.LelangResultActivity" />
         <activity android:name=".activity.GroupchatActivity" />
